# Estudar

./: CHANGELOG.md  CONC_grafo.json  README.md  _CBINC.json  _CBINC1.json  _CONC.json  app.tcss  base.json  base.toon  base_grafo.json  canivete.py  editor.py  estudar0.json  estudar0.py  infracoes.json  infracoes_0.json  jsonData_to_jsonGraph.py  main.py  other.json  perguntas.py  pyproject.toml  requirements.txt  semob.json  spec.md  textual_app.py  this.md
editor/: engine.py
model/: graph.py
quiz/: engine.py
screens/: dialogs.py  editor_menu.py  main_menu.py  node_detail.py  node_table.py  quiz_menu.py  quiz_play.py  subject_list.py  topic_list.py
storage/: json_store.py
util/: keys.py  text.py
